--- a/CloHe/NAMESPACE
+++ b/CloHe/NAMESPACE
@@ -1,6 +1,6 @@
 export( readFormosatData
       , readMultiFormosatData
-      , readMultiSentinelData
+      , readMultiSentinelSmoothedData
       , readMultiSentinelRawData
       , learnGaussian
       , learnFuncSpectra
