--- a/CloHe/.cproject
+++ b/CloHe/.cproject
@@ -21,17 +21,17 @@
 							<builder id="cdt.managedbuild.target.gnu.builder.base.972987487" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.archiver.base.1932091757" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.base.972825518" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.base">
-								<option id="gnu.cpp.compiler.option.include.paths.1747795524" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1747795524" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/usr/lib/R/site-library/Rcpp/include"/>
-									<listOptionValue builtIn="false" value="/usr/share/R/include"/>
-									<listOptionValue builtIn="false" value="/usr/lib/R"/>
 									<listOptionValue builtIn="false" value="/home/iovleff/R/x86_64-pc-linux-gnu-library/3.4/rtkore/include"/>
 									<listOptionValue builtIn="false" value="/home/iovleff/R/x86_64-pc-linux-gnu-library/3.4/rtkore/projects"/>
+									<listOptionValue builtIn="false" value="/usr/share/R/include"/>
+									<listOptionValue builtIn="false" value="/usr/lib/R"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.2038914718" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.base.2034401668" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.base">
-								<option id="gnu.c.compiler.option.include.paths.1446715384" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.1446715384" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/usr/lib/R"/>
 									<listOptionValue builtIn="false" value="/usr/share/R/include"/>
 								</option>
